[package]
name = "cpusets"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.20"
windows = {version = "0.58.0", features = [
  "Win32",
  "Win32_Security",
  "Win32_System",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Foundation",
  "Win32_System_Diagnostics",
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_ToolHelp",
  ]}
